<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="10dp"
              tools:context=".activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_border"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connection_type"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spinner_connection_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/connection_types"/>

            <Button
                android:id="@+id/button_connect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connect"/>

            <Button
                android:id="@+id/button_disconnect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/disconnect"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/rounded_border"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vehicle_telemetry"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:text="@string/battery"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/text_view_battery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0 %"
                    android:textColor="@android:color/black"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:text="@string/speed"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/text_view_speed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0.0 m/s"
                    android:textColor="@android:color/black"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:text="@string/altitude"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/text_view_altitude"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0 m"
                    android:textColor="@android:color/black"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:text="@string/position"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/text_view_position"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="(0, 0)"
                    android:textColor="@android:color/black"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:text="@string/produced_x"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/text_view_produced_x"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textColor="@android:color/black"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:text="@string/produced_y"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/text_view_produced_y"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textColor="@android:color/black"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/rounded_border"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/production"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:labelFor="@+id/edit_text_amount_of_x"
                    android:text="@string/amount_of_x"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@id/edit_text_amount_of_x"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:textColor="@android:color/black"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:labelFor="@+id/edit_text_amount_of_y"
                    android:text="@string/amount_of_y"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@id/edit_text_amount_of_y"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:textColor="@android:color/black"/>
            </LinearLayout>

            <Button
                android:id="@+id/button_start_production"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/start_production"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
